# lima

./: setenv-lima.sh
lima_linguisticprocessing/conf/: lima-lp-eng.xml  lima-lp-fre.xml
lima_linguisticprocessing/test/limaServer/: CMakeLists.txt
